<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/purple_700"
            android:textSize="40sp" />

        <Button
            android:id="@+id/play"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:text="@string/play"
            tools:ignore="MissingConstraints"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/settings"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/settings"
            tools:ignore="MissingConstraints"
            tools:layout_marginTop="10dp" />

        <Button
            android:id="@+id/leaderBoard"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/records"
            tools:ignore="MissingConstraints"
            tools:layout_marginTop="10dp" />

        <Button
            android:id="@+id/exit"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/red_1"
            android:text="@string/exit"
            tools:ignore="MissingConstraints"
            tools:layout_marginTop="10dp"
            tools:targetApi="lollipop" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>