<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySettings">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/gray"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:layout_margin="10dp"
            android:text="@string/types_of_questions"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/synonyms_antonyms"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/closest_meaning"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/modal"
            android:textColor="@color/gray"
            android:textSize="20sp" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <CheckBox
            android:id="@+id/type1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp" />

        <CheckBox
            android:id="@+id/type2"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <CheckBox
            android:id="@+id/type3"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/save"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/save" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>