<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLeaderBoard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/leave2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:text="@string/leave"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/board_of_records"
            android:textColor="@color/red"
            android:textSize="35sp" />

        <TableLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:ignore="MissingConstraints">

            <!-- head row-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/number"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/nickname"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/score_title"
                    android:textColor="@color/blue"
                    android:textSize="25sp" />
            </TableRow>

            <!--1st row-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/nick1"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_null"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/score1"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_null"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </TableRow>

            <!--2nd row-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_2"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/nick2"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_null"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/score2"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_null"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </TableRow>

            <!--3rd row-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_3"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/nick3"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_null"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/score3"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_null"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </TableRow>

            <!-- 4th row-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_4"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/nick4"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_null"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/score4"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_null"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </TableRow>

            <!-- 5th row-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_5"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/nick5"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_null"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/score5"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_null"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </TableRow>

            <!-- 6th row-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_6"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/nick6"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_null"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/score6"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/_null"
                    android:textColor="@color/black"
                    android:textSize="25sp" />
            </TableRow>

            <!-- 7th row-->
            <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/_7"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/nick7"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/_null"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/score7"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/_null"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </TableRow>

        </TableLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>