<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPlay">

    <LinearLayout
        android:id="@+id/l_play"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/round_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="35dp"
            android:text="@string/round_starting"
            android:textColor="@color/purple_700"
            android:textSize="25sp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/score_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/score_starting"
            android:textColor="@color/teal_700"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/place_holder"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l_play" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_holder">

        <Button
            android:id="@+id/check"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:enabled="false"
            android:backgroundTint="@color/purple_700"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:text="@string/check" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>